[package]
name = "port"
version = "0.0.0-alpha.1"
edition = "2024"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities", "network-programming"]
description = "List open sockets"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
eyre = "0.6.12"
libc = "0.2.172"
log = "0.4.27"
neli = { version = "0.7.0-rc.3", features = ["async"] }
nix = { version = "0.30.0", features = ["net", "user"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "mio", "net", "rt-multi-thread"] }
unicode-width = "0.2.0"
